# magyarul

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CORE.md  CURIOSITY.md  EXERCISES.md  EXTENDED.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pull_request.yml  release.yml
src/magyarul/: CORE.md  CURIOSITY.md  EXERCISES.md  EXTENDED.md  core.py  curiosity.py  extended.py
src/magyarul/b1/exercises/: dictations.py  practices.py  questions.py
src/magyarul/b2/: core.py
src/magyarul/deprecated/: CORE.md  CURIOSITY.md  EXTENDED.md  core.copy.md
src/magyarul/exercises/: PRACTICE.md  QUESTIONS.md  REPETITION.md  dictations.py  practices.py  questions.py
