[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PEP 621. See https://www.python.org/dev/peps/pep-0621/
name = "magyarul"
description = ""
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
    {name = "Diego Vitoriano", email = "diego.vitoriano@impi.sh"},
]
maintainers = [
    {name = "Diego Vitoriano", email = "diego.vitoriano@impi.sh"},
]
keywords = [
]
classifiers = [
]
dependencies = [
]
dynamic = ["version"]
scripts = { magyarul = "magyarul.cli:main" }

[project.urls]
Donate = "https://magyarul.impi.sh/donate/"
Documentation = "https://magyarul.impi.sh/documentation/"
Changes = "https://magyarul.impi.sh/changelog/"
"Source Code" = "https://github.com/impi/magyarul/"
"Issue Tracker" = "https://github.com/impi/magyarul/issues/"

[tool.hatch]
version.path = "src/magyarul/__init__.py"
build.packages = ["src/magyarul"]
envs.dev.dependencies = [
    "pre-commit~=3.6",
    "pdoc~=14.4",
]
envs.dev.scripts.check = "pre-commit"
envs.dev.scripts."build-docs" = "mkdir docs && pdoc -o docs src/magyarul/"
envs.dev.scripts."serve-docs" = "pdoc -n -p8000 src/magyarul"

[tool.bandit]
skips = [
    "B101"
]

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]
